--- a/Aula019_Praticando/index.html
+++ b/Aula019_Praticando/index.html
@@ -6,6 +6,7 @@
     <title>Sinos do Vento</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <header>
@@ -67,6 +68,23 @@
 
     <p><strong>Em resumo,</strong> os sinos dos ventos são muito mais do que simples objetos decorativos. Eles são instrumentos que conectam o passado ao presente, a natureza à cultura e o material ao espiritual. Ao escolher um sino dos ventos, você está levando para casa um pedacinho de história e uma fonte de paz e harmonia.</p>
     </main>
+
+    <footer>
+        <form action="">
+        <fieldset>
+            <legend>Comentário</legend>
+
+            <label for="igostou">Gostei</label> <input type="radio" name="opini" id="igostou"> 
+            <label for="ingostei">Não Gostei</label> <input type="radio" name="opini" id="ingostei">  <br> <br>
+            <input type="button" value="Enviar" id="botao" onclick="clicar()">
+            <div id="fala"></div>
+            
+
+        </fieldset>
+
+
+        </form>
+    </footer>
 
 </body>
 </html>
